# sendflare-sdk-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
sendflare_sdk/: __init__.py  client.py  models.py
tests/: __init__.py  test_client.py
