[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sendflare-sdk-python"
version = "1.0.0"
description = "The SDK for sendflare service written in Python"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["sendflare", "email", "sdk", "api"]
authors = [
    {name = "Sendflare Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://docs.sendflare.io"
Documentation = "https://docs.sendflare.io"
Repository = "https://github.com/sendflare/sendflare-sdk-python"
"Bug Tracker" = "https://github.com/sendflare/sendflare-sdk-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

